@@ -1,5 +1,6 @@
 = ActiveMerchant CHANGELOG
 
+* Remove test_result_from_cc_number from eWay gateway. [cody]
 * Remove duplicate attr_reader definitions from all gateways [cody]
 * Remove useless tests raising Error [cody]
 * Update gateway templates [cody]
